feat: add exercices to understeand how alignments works with flex

--- a/tailwind/spacing_and_alignments/src/index.html
+++ b/tailwind/spacing_and_alignments/src/index.html
@@ -41,5 +41,65 @@
         <div class="bg-blue-600 p-4 m-4">5</div>
         <div class="bg-green-600 p-4 m-4">6</div>
     </div>
+
+    <div class="bg-purple-300 h-40 flex content-center">
+        <div class="bg-purple-600 h-10 p-3 mx-4">1</div>
+        <div class="bg-purple-600 h-10 p-3 mx-4">2</div>
+        <div class="bg-purple-600 h-10 p-3 mx-4">3</div>
+    </div>
+
+    <div class="bg-green-300 h-40 flex flex-wrap content-around">
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">1</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">2</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">3</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">4</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">5</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">6</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">7</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">8</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">9</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">10</div>
+        <div class="bg-green-600 h-10 w-24 p-7 mx-7">11</div>
+    </div>
+
+    <div class="bg-purple-400 flex h-40">
+        <div class="bg-purple-700 m-2 p-2">1</div>
+        <div class="bg-purple-700 m-2 p-2">2</div>
+        <div class="bg-purple-700 m-2 p-2">3</div>
+    </div>
+
+    <div class="bg-red-400 flex h-24 items-end">
+        <div class="bg-red-700 p-2 m-2">1</div>
+        <div class="bg-red-700 p-2 m-2">2</div>
+        <div class="bg-red-700 p-2 m-2">3</div>
+        <div class="bg-red-700 p-2 m-2">4</div>
+    </div>
+
+
+    <div class="bg-pink-400 grid grid-cols-3 h-40 place-items-">
+        <div class="bg-pink-700 p-2 m-2">Testando</div>
+        <div class="bg-pink-700 p-2 m-2">2</div>
+        <div class="bg-pink-700 p-2 m-2">3</div>
+        <div class="bg-pink-700 p-2 m-2">4</div>
+        <div class="bg-pink-700 p-2 m-2">5</div>
+        <div class="bg-pink-700 border-4 border-black rounded-xl p-2 m-2">6</div>
+    </div>
+
+    <!--Exercicio: crie um botão, 4 padding nas laterais, 2 na vertical, cor de bg, mudar cor no hover, fonte negrito-->
+    <div class="flex h-40 items-center justify-center bg-yellow-300 ">
+        <div class="bg-yellow-500 text-white h-20 px-20 w-20 flex items-center justify-center hover:b font-bold hover:cursor-pointer hover:bg-green-500 rounded-xl">
+            Botão
+        </div>
+    </div>
+
+    <!--Exercicio 12: crie uma div com texto pequeno, div com w-20, centralize a div x add margem superio 2-->
+    <div class="w-20 bg-green-300 m-auto text-center mt-2">
+        Text
+    </div>
+
+    <p class="m-20">Espacing</p>
+    <p class="m-20">Espacing</p>
+    <p class="m-20">Espacing</p>
+    <p class="m-20">Espacing</p>
 </body>
 </html>
