feat: understeand the height concepts

--- a/tailwind/spacing_and_alignments/src/index.html
+++ b/tailwind/spacing_and_alignments/src/index.html
@@ -97,6 +97,20 @@
         Text
     </div>
 
+    <!--Width-->
+    <div class="bg-blue-700 w-full p-4 max-w-3xl">
+        Max Width
+    </div>
+
+    <div class="bg-blue-400 p-4 w-40 min-w-min">
+        Min Width
+    </div>
+
+    <!--Height-->
+    <div class="bg-blue-400 p-4 w-20 h-screen">
+        Min Height
+    </div>
+
     <p class="m-20">Espacing</p>
     <p class="m-20">Espacing</p>
     <p class="m-20">Espacing</p>
