--- a/tailwind/typography/src/index.html
+++ b/tailwind/typography/src/index.html
@@ -44,8 +44,45 @@
     <p class="italic text-3xl tracking-widest bg-green-600 m-4 p-4 text-pink-600">Exercicio 14 para fazer oque precisa ser feito</p>
 
 
+    <!--Lists-->
+    <ul class="list-disc m-10 bg-red-400 list-inside">
+        <li>Carro</li>
+        <li>Aviao</li>
+        <li>Barco</li>
+        <li>Navio</li>
+    </ul>
+
+    <!--Placeholder-->
+    <div class="m-4">
+        <input type="text" placeholder="Este e o placeholder" class="placeholder-red-400">
+    </div>
+
+    <!--Alinhamento de texto-->
+    <p class="bg-purple-300 text-2xl text-white">Texto a esquerda</p>
+    <p class="bg-purple-400 text-2xl text-center text-white">Texto no centro</p>
+    <p class="bg-purple-500 text-2xl text-right text-white">Texto a direita</p>
 
 
+    <!--cores-->
+    <p class="text-3xl text-indigo-100">Testando Indigo</p>
+    <p class="text-3xl text-indigo-200">Testando Indigo</p>
+    <p class="text-3xl text-indigo-300">Testando Indigo</p>
+    <p class="text-3xl text-indigo-400">Testando Indigo</p>
+    <p class="text-3xl text-indigo-500">Testando Indigo</p>
+    <p class="text-3xl text-indigo-600">Testando Indigo</p>
+    <p class="text-3xl text-indigo-700">Testando Indigo</p>
+    <p class="text-3xl text-indigo-800">Testando Indigo</p>
+    <p class="text-3xl text-indigo-900">Testando Indigo</p>
+
+    <!--Exercicio 15: crie um p de erro, fundo vermelho, texto em vermelho negrito, bordas vermelhas, arredondado-->
+    <p class="p-4 m-4 border-2 hover:cursor-pointer border-red-500 bg-red-400 text-red-800 font-bold text-center rounded-lg">Erro: algo deu errado</p>
+
+    <!--Decoration and transform-->
+
+    <p class="text-2xl underline">Este texto tera underline</p>
+    <p class="text-2xl line-through">Este texto tera underline</p>
+    <p class="text-2xl lowercase">Este texto vai ficar todo em MiNUSCULO</p>
+    <p class="text-2xl uppercase">Este texto vai ficar todo em MAIUSCULO</p>
 
 
 
