feat: add the scafold api, and db models

--- a/study/front-end/tailwind/spacing_and_alignments/src/index.html
+++ b/study/front-end/tailwind/spacing_and_alignments/src/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="flex bg-red-300 justify-end">
-        <div class="bg-red-600 p-4 m-4">1</div>
-        <div class="bg-red-600 p-4 m-4">2</div>
-        <div class="bg-red-600 p-4 m-4">3</div>
-        <div class="bg-red-600 p-4 m-4">4</div>
+    <div class="bg-red-300 flex flex-col">
+        <div class="bg-red-600 w-10 p-4 m-4">1</div>
+        <div class="bg-red-600 w-10 p-4 m-4">2</div>
+        <div class="bg-red-600 self-end w-14 p-4 m-4">3</div>
+        <div class="bg-red-600 w-10 p-4 m-4">4</div>
     </div>
     <div class="flex bg-green-300 justify-between">
         <div class="bg-green-600 p-4 m-4">1</div>
