--- a/study/front-end/tailwind/backgrounds/src/index.html
+++ b/study/front-end/tailwind/backgrounds/src/index.html
@@ -7,29 +7,30 @@
     <title>Background</title>
   </head>
   <body>
-    <div class="h-48 overflow-auto bg-fixed bg-arvore">
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
-        <p class="text-white p-10" >Testando</p>
+
+    <div class="bg-green-400 h-screen flex flex-wrap items-start content-between">
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
+      <p class="p-4 m-4  bg-green-600">Ola</p>
     </div>
 
-    <div class="h-10 bg-green-100"></div>
-    <div class="h-10 bg-green-200"></div>
-    <div class="h-10 bg-green-300"></div>
-    <div class="h-10 bg-green-400"></div>
-    <div class="h-10 bg-green-500"></div>
-    <div class="h-10 bg-green-600"></div>
-    <div class="h-10 bg-green-700 bg-opacity-0">Opacidade 0</div>
-    <div class="h-10 bg-green-800 bg-opacity-25">Opacidade 25</div>
-    <div class="h-10 bg-green-900 bg-opacity-50">Opacidade 50</div>
 
-    <!--Posicao e repetição-->
+    <div class="h-screen overflow-auto bg-auto bg-arvore">
+        <p class="text-white p-10">BG-AUTO</p>
+    </div>
 
     <div class="h-screen bg-cover bg-arvore">
         <p class="text-white p-10">Bg Cover</p>
@@ -43,13 +44,45 @@
         <p class="text-white p-10">Auto</p>
     </div>
 
+    <div class="h-screen bg-fixed bg-arvore">
+      <p class="text-white p-10">Fixed</p>
+    </div>
+
+    <div class="h-screen bg-inherit bg-arvore">
+      <p class="text-white p-10">Inherit</p>
+    </div>
+    <div class="h-screen bg-transparent bg-arvore">
+      <p class="text-white p-10">transparent</p>
+    </div>
+    <div class="h-screen bg-arvore">
+      <p class="text-white p-10">Opacity 50</p>
+    </div>
+
+
+
+    <div class="h-10 bg-green-100"></div>
+    <div class="h-10 bg-green-200"></div>
+    <div class="h-10 bg-green-300"></div>
+    <div class="h-10 bg-green-400"></div>
+    <div class="h-10 bg-green-500"></div>
+    <div class="h-10 bg-green-600"></div>
+    <div class="h-10 bg-green-700 bg-opacity-0">Opacidade 0</div>
+    <div class="h-10 bg-green-800 bg-opacity-25">Opacidade 25</div>
+    <div class="h-10 bg-green-900 bg-opacity-50">Opacidade 50</div>
     <!--Gradientes-->
     <p>Gradient</p>
     <div class="h-48 bg-gradient-to-r from-gray-700 to-red-400"></div>
     <div class="h-48 bg-gradient-to-b from-blue-700 via-green-600  to-red-400"></div>
 
-
-
+    <div class="bg-red-700 h-screen p-5 flex items-center justify-center">
+      Olá mundo
+    </div>
+    <div class="grid grid-cols-2 bg-blue-700 h-screen place-content-end">
+      <p class="p-4 h-4 m-4 bg-green-300 w-36">Olá mundo</p>
+      <p class="p-4 h-4 m-4 bg-green-300 w-36">Olá mundo</p>
+      <p class="p-4 h-4 m-4 bg-green-300 w-36">Olá mundo</p>
+      <p class="p-4 h-4 m-4 bg-green-300 w-36">Olá mundo</p>
+    </div>
 
     <p class="h-20">Espacamento</p>
     <p class="h-20">Espacamento</p>
