feat: refactor to include the db interfaces

--- a/study/front-end/tailwind/grid/src/index.html
+++ b/study/front-end/tailwind/grid/src/index.html
@@ -7,6 +7,16 @@
     <title>Grid</title>
 </head>
 <body>
+
+    <div class="grid grid-cols-4 bg-blue-500 h-screen place-items-end">
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+        <div class="bg-blue-700 m-4 p-4">Ola</div>
+    </div>
     <!--Exercicio 7: crie um container grid, deve ter 3 columas, e 9 itens total, as colunas devem ter cores diferentes-->
     <div class="container grid grid-cols-3 bg-red-200">
         <div class="div bg-blue-300">1</div>
