--- a/study/front-end/tailwind/backgrounds/src/index.html
+++ b/study/front-end/tailwind/backgrounds/src/index.html
@@ -28,7 +28,7 @@
     </div>
 
 
-    <div class="h-screen overflow-auto bg-auto bg-arvore">
+    <div class="h-screen overflow-auto bg- bg-arvore ">
         <p class="text-white p-10">BG-AUTO</p>
     </div>
 
