--- a/front-end/tailwind/refresh_of_concetps/src/index.html
+++ b/front-end/tailwind/refresh_of_concetps/src/index.html
@@ -14,8 +14,11 @@
     </style>
 </head>
 <body>
-    <div class="h-auto bg-red-300">
-        <h1>Hello World</h1>
+    <div class="h-full bg-blue-300 grid grid-cols-4 divide-x-4 divide-red-500">
+        <p>Testando divide</p>
+        <p>Testando divide</p>
+        <p>Testando divide</p>
+        <p>Testando divide</p>
     </div>
 </body>
 </html>
